# django-hug

./: .cirrus.yml  .coveragerc  .gitignore  CHANGES.md  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
django_hug/: __init__.py  arguments.py  constants.py  directives.py  exceptions.py  format.py  routes.py  utils.py
djhug/: __init__.py  arguments.py  constants.py  content_negotiation.py  converters.py  decorators.py  exceptions.py  format.py  formatters.py  formatters_default.py  middleware.py  options.py  requests_handler.py  routes.py  settings.py  shortcuts.py  utils.py
example/: manage.py
example/demo/: urls.py  views.py
example/ilovehug/: settings.py  urls.py  wsgi.py
tests/: _test_api.py  conftest.py  test_api.py  test_decorators.py  test_formatters.py  test_route_register.py  test_routes.py  test_settings.py  test_view_options.py  test_view_with_extra_decorators.py  utils.py
tests/test_routes/: test_options.py  test_route_register.py  test_view_with_extra_decorators.py
