[metadata]
name = django-hug
version = 0.1.dev1
url = https://github.com/jounderwood/django-hug
author_email = andrey.sdr@gmail.com
description = Package for working with Django views and request/response validation in more convenient way.
long_description = file: README.md
license = BSD 3-Clause License
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7

[options]
packages = find:
include_package_data = True

[options.packages.find]
exclude =
	tests

[options.package_data]
* = *.txt, *.md


[tool:pytest]
env =
    DEFAULTSETTINGS_MODULE = settings_test
    YZCONFIG_MODULE = settings_test
    TESTS_ON_AIR = yes
python_files = tests.py test_*.py
norecursedirs = .venv*
pep8maxlinelength = 120

[tool:coverage:run]
omit =
    */tests/*

[tool:coverage:report]
exclude_lines =
    pragma: no cover