[metadata]
name = django-hug
version = 0.1.beta2
url = https://github.com/jounderwood/django-hug
author_email = andrey.sdr@gmail.com
description = Package for working with Django views and request/response validation in more convenient way.
long_description = file: README.md
license = BSD 3-Clause License
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7

[options]
packages = find:
include_package_data = True

[options.packages.find]
exclude =
	tests

[options.package_data]
* = *.txt, *.md
